# cyrillic-encoder

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.adoc  build.nix  conanfile.py  conanfile.txt  default.nix  dependencies.cmake  flake.nix  iwyu.imp  lychee.toml  pre-commit-hooks.nix  pyproject.toml  treefmt.nix
.github/: settings.yml
.github/workflows/: appstream-util-validate.yaml  auto-black-format.yml  auto-clang-format.yml  auto-cmake-format.yml  auto-ruff.yml  build.yaml  build.yml  clang-format.yaml  cmake-format.yaml  cmake-format.yml  cmake.yml  desktop-file-validate.yaml  external-data-checker.yaml  flake-checker.yaml  format-just.yaml  link-checker.yaml  lint.yaml  lint.yml  lock-updater.yaml  metainfo-validate.yaml  ruff.yml  schedule.yaml  treefmt.yaml  yamllint.yaml  yamllint.yml
.github/workflows/format/: clang-format.yaml  cmake-format.yaml  just.yaml
.github/workflows/lint/: desktop-file.yaml  flake.yaml  metainfo.yaml  yamllint.yaml
cmake/: Sanitizers.cmake  UseCompilerCache.cmake
include/cyrillic-encoder/: encode.hpp
packaging/: CMakeLists.txt  com.jwillikers.CyrillicEncoder.desktop  com.jwillikers.CyrillicEncoder.metainfo.xml  com.jwillikers.CyrillicEncoder.yaml  cpackGeneratorOverrides.cmake
profiles/: clang-12  clang.jinja  default.jinja  gcc  gcc-10  gcc.jinja
profiles/clang/: debug.jinja  relwithdebinfo.jinja
profiles/clang/14/: debug.jinja  release.jinja  relwithdebinfo.jinja
profiles/clang/16/: debug.jinja  release.jinja  relwithdebinfo.jinja
profiles/gcc/: debug.jinja  relwithdebinfo.jinja
profiles/gcc/11/: debug.jinja  release.jinja  relwithdebinfo.jinja
profiles/gcc/13/: debug.jinja  release.jinja  relwithdebinfo.jinja
src/: CMakeLists.txt  encode.cpp  encode.test.cpp  main.cpp  qt_plugin_imports.h.in
test_package/: conanfile.py
